test/should_not_compile/word-constant.sml
val _ = 0wx1_0000_0000_0000_0000 : Word64.word;
(* val b = 0w99999999999999999999999999999999999 : Word64.word;
print (Word64.toString 0w7); *)
